--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint-plugin-import": "^2.17.2"
   },
   "dependencies": {
-    "filehound": "^1.17.0"
+    "fs-jetpack": "^2.2.2",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7"
   }
 }
