--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "fs-jetpack": "^2.2.2",
+    "node-cache": "^4.2.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
   }
