--- a/package.json
+++ b/package.json
@@ -33,14 +33,13 @@
   "author": "Coinranking B.V.",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.2"
+    "eslint": "^6.7.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   },
   "dependencies": {
-    "fs-jetpack": "^2.2.2",
-    "node-cache": "^4.2.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "cloudscraper": "^4.4.0",
+    "node-cache": "^5.0.2",
+    "request": "^2.88.0"
   }
 }
