--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "supplies",
   "version": "1.0.0",
   "description": "A Javascript library for getting up to date cryptocurrency total supplies, circulating supplies and max supplies",
-  "main": "lib/supply.js",
+  "main": "lib/supplies.js",
   "engines": {
-    "node": ">=8.10.0"
+    "node": ">=12.13.0"
   },
   "repository": {
     "type": "git",
@@ -32,14 +32,14 @@
   ],
   "author": "Coinranking B.V.",
   "license": "MIT",
-  "devDependencies": {
-    "eslint": "^6.7.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
-  },
   "dependencies": {
     "cloudscraper": "^4.4.0",
     "node-cache": "^5.0.2",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.7.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
   }
 }
