--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,17 @@
   "rules": {
     "no-console": 0,
     "no-param-reassign": 0,
-    "no-underscore-dangle": 0,
     "class-methods-use-this": 0,
-  }
+    "no-underscore-dangle": 0
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/*.test.js"
+      ],
+      "env": {
+        "jest": true
+      }
+    }
+  ]
 }
