--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "type": "git",
     "url": "https://github.com/coinranking/supplies.git"
   },
+  "bin": "./bin/cli.js",
   "readme": "README.md",
-  "scripts": {},
+  "scripts": {
+    "lint": "npx eslint --ext .js --ignore-path .eslintignore .",
+    "test": "npx jest",
+    "exec": "node ./lib/cli.js"
+  },
   "bugs": {
     "url": "https://github.com/coinranking/supplies/issues"
   },
@@ -33,13 +38,17 @@
   "author": "Coinranking B.V.",
   "license": "MIT",
   "dependencies": {
-    "cloudscraper": "^4.4.0",
-    "node-cache": "^5.0.2",
+    "cloudscraper": "^4.5.0",
+    "commander": "^4.0.1",
+    "inquirer": "^7.0.1",
+    "node-cache": "^5.1.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "eslint": "^6.7.1",
+    "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.19.1",
+    "jest": "^25.0.0",
+    "nock": "^11.7.0"
   }
 }
