--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "scripts": {
     "lint": "npx eslint --ext .js --ignore-path .eslintignore .",
     "test": "npx jest",
-    "exec": "node ./lib/cli.js"
+    "cm": "git-cz"
   },
   "bugs": {
     "url": "https://github.com/coinranking/supplies/issues"
   },
-  "homepage": "https://coinranking.com",
+  "homepage": "https://github.com/coinranking/supplies",
   "keywords": [
     "cryptocurrencies",
     "cryptocurrency",
@@ -40,15 +40,30 @@
   "dependencies": {
     "cloudscraper": "^4.5.0",
     "commander": "^4.0.1",
-    "inquirer": "^7.0.1",
     "node-cache": "^5.1.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.3",
+    "@commitlint/config-conventional": "^8.3.3",
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
+    "husky": "^3.1.0",
     "jest": "^25.0.0",
     "nock": "^11.7.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-push": "npm run lint && npm run test"
+    }
   }
 }
