improvement(bin): rename the cli so it is the same as the project

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/coinranking/supplies.git"
   },
-  "bin": "./bin/cli.js",
+  "bin": "./bin/supplies.js",
   "readme": "README.md",
   "scripts": {
     "lint": "npx eslint --ext .js --ignore-path .eslintignore .",
