--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,17 @@
 {
-  "extends": "airbnb-base",
+  "extends": [
+    "airbnb-base",
+    "plugin:jsdoc/recommended"
+  ],
   "rules": {
     "no-console": 0,
     "no-param-reassign": 0,
     "class-methods-use-this": 0,
     "no-underscore-dangle": 0
   },
+  "plugins": [
+    "jsdoc"
+  ],
   "overrides": [
     {
       "files": [
