--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "lint": "npx eslint --ext .js --ignore-path .eslintignore .",
     "test": "npx jest",
-    "cm": "git-cz"
+    "cm": "git-cz",
+    "docs": "jsdoc2md lib/**/*.js > documentation.md"
   },
   "bugs": {
     "url": "https://github.com/coinranking/supplies/issues"
@@ -51,8 +52,11 @@
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jsdoc": "^18.6.0",
     "husky": "^3.1.0",
     "jest": "^25.0.0",
+    "jsdoc": "^3.6.3",
+    "jsdoc-to-markdown": "^5.0.3",
     "nock": "^11.7.0"
   },
   "config": {
