--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -17,26 +17,27 @@ pipelines:
           script:
             - npm install
             - npm run test
-  master:
-    - parallel:
+  branches:
+    master:
+      - parallel:
+        - step:
+            name: Lint
+            caches:
+              - node
+            script:
+              - npm install
+              - npm run lint
+        - step:
+            name: Test
+            caches:
+              - node
+            script:
+              - npm install
+              - npm run test
       - step:
-          name: Lint
+          name: Release
           caches:
             - node
           script:
             - npm install
-            - npm run lint
-      - step:
-          name: Test
-          caches:
-            - node
-          script:
-            - npm install
-            - npm run test
-    - step:
-        name: Release
-        caches:
-          - node
-        script:
-          - npm install
-          - npm run semantic-release
+            - npm run semantic-release
