--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "cloudscraper": "^4.5.0",
     "commander": "^4.1.0",
     "node-cache": "^5.1.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "socket.io-client": "^2.3.0",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
