feat: ignore the documentation but generate dynamicly

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -40,4 +40,5 @@ pipelines:
             - node
           script:
             - npm install
+            - npm run docs
             - npm run semantic-release
