--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "npx eslint --ext .js --ignore-path .eslintignore .",
     "test": "npx jest",
     "cm": "git-cz",
-    "docs": "jsdoc2md lib/**/*.js > documentation.md",
+    "docs": "jsdoc2md lib/**/*.js > DOCUMENTATION.md",
     "semantic-release": "semantic-release"
   },
   "bugs": {
@@ -96,6 +96,7 @@
         "assets": [
           "package.json",
           "package-lock.json",
+          "DOCUMENTATION.md",
           "CHANGELOG.md"
         ],
         "message": "chore(release): ${nextRelease.version} [skip ci]nn${nextRelease.notes}"
