--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@coinranking/supplies",
   "version": "1.27.0",
-  "description": "A Javascript library for getting up to date cryptocurrency total supplies, circulating supplies and max supplies",
+  "description": "A JavaScript library for getting up to date cryptocurrency total supplies, circulating supplies and max supplies",
   "main": "lib/supplies.js",
   "engines": {
     "node": ">=12.13.0"
@@ -35,7 +35,8 @@
     "circulating supply",
     "total supply",
     "max supply",
-    "coinranking"
+    "coinranking",
+    "blockchain"
   ],
   "author": "Coinranking B.V.",
   "license": "MIT",
