--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "node-cache": "^5.1.1",
     "request": "^2.88.2",
     "socket.io-client": "^3.0.0",
-    "uuid": "^8.1.0"
+    "uuid": "^8.1.0",
+    "web3": "^1.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
