--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "cloudscraper": "^4.6.0",
     "commander": "^9.1.0",
     "node-cache": "^5.1.2",
-    "request": "^2.88.2",
-    "web3": "^4.0.3"
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
